--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /data
+*.csv
 
 # Created by https://www.gitignore.io/api/jupyternotebooks
 # Edit at https://www.gitignore.io/?templates=jupyternotebooks
